fix command line scripts